5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4188/executions/1764_1183.log
== TEST (2019-05-23 17:09:38) 
-- CODE:
n=array(eval(input("digite o vetor: ")))
m=0
p=zeros(size(n-1))
while (m < size(n)):
	if(n[m] > 0):
		p[m]=n[m]
print(p)
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n=array(eval(input()))
NameError: name 'array' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 17:10:21) 
-- CODE:
from math import *
n=array(eval(input("digite o vetor: ")))
m=0
p=zeros(size(n-1))
while (m < size(n)):
	if(n[m] > 0):
		p[m]=n[m]
print(p)
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    n=array(eval(input()))
NameError: name 'array' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 17:10:40) 
-- CODE:
from numpy import *
n=array(eval(input("digite o vetor: ")))
m=0
p=zeros(size(n-1))
while (m < size(n)):
	if(n[m] > 0):
		p[m]=n[m]
print(p)
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 17:11:31) 
-- CODE:
from numpy import *
n=array(eval(input("digite o vetor: ")))
m=0
p=zeros(size(n-1))
while (m < size(n)):
	if(n[m] > 0):
		p[m]=n[m]
		m=m+1
print(p)
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 17:12:46) 
-- CODE:
from numpy import *
n=array(eval(input("digite o vetor: ")))
m=0
p=zeros(size(n-1))
while (m < size(n)):
	if(n[m] > 0):
		p[m]=n[m]
		m=m+1
	print(p)
print(p)
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 17:14:23) 
-- CODE:
from numpy import *
n=array(eval(input("digite o vetor: ")))
m=0
p=zeros(size(n-1))
while (m < size(n)):
	if(n[m] > 0):
		p[m]=n[m]
	m=m+1
	print(p)
print(p)
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 18:45:10) 
-- CODE:
from numpy import *
n=array(eval(input("digite o vetor: ")))
m=0
p=zeros(size(n-1))
while (m < size(n)):
	if(n[m] > 0):
		p[m]=n[m]
	m=m+1
p=0
while()
print(m)
	

-- ERROR:
File "XXXX", line 10
    while()
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 18:45:21) 
-- CODE:
from numpy import *
n=array(eval(input("digite o vetor: ")))
m=0
p=zeros(size(n-1))
while (m < size(n)):
	if(n[m] > 0):
		p[m]=n[m]
	m=m+1
p=0
print(m)
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 18:46:37) 
-- CODE:
from numpy import *
n=array(eval(input("digite o vetor: ")))
m=0
x=0
p=zeros(size(n-1))
while (m < size(n)):
	if(n[m] > 0):
		p[m]=n[m]
		x=x+1
	m=m+1
p=0
print(m)
print(x)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 18:49:49) 
-- CODE:
from numpy import *
n=array(eval(input("digite o vetor: ")))
m=0
x=0
p=zeros(size(n-1))
while (m < size(n)):
	if(n[m] > 0):
		p[m]=n[m]
		x=x+1
	m=m+1
p=0
print(p)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 18:50:24) 
-- CODE:
from numpy import *
n=array(eval(input("digite o vetor: ")))
m=0
x=0
p=zeros(size(n-1))
while (m < size(n)):
	if(n[m] > 0):
		p[m]=n[m]
		x=x+1
	m=m+1
print(p)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 18:57:35) 
-- CODE:
from numpy import *
n=array(eval(input("digite o vetor: ")))
m=0
x=0
p=zeros(size(n-1))
while (m < size(n)):
	if(n[m] > 0):
		p[m]=n[m]
		x=x+1
	m=m+1
t=0
b=0
l=zeros(size(x-1))
while(t < size(n)):
	if(n(t)>0):
		l[b]=n[t]
		b = b + 1
	t = t + 1
print(l)
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 18:57:49) 
-- CODE:
from numpy import *
n=array(eval(input("digite o vetor: ")))
m=0
x=0
p=zeros(size(n-1))
while (m < size(n)):
	if(n[m] > 0):
		p[m]=n[m]
		x=x+1
	m=m+1
t=0
b=0
l=zeros(size(x-1))
while(t < size(n)):
	if(n(t)>0):
		l[b]=n[t]
		b = b + 1
	t = t + 1
print(l)
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 19:00:19) 
-- CODE:
from numpy import *
n=array(eval(input("digite o vetor: ")))
m=0
x=0
p=zeros(size(n-1))
while (m < size(n)):
	if(n[m] > 0):
		p[m]=n[m]
		x=x+1
	m=m+1
from numpy import *
t=0
b=0
l=zeros(size(x-1))
while(t < size(n)):
	if(n(t)>0):
		l[b]=n[t]
		b = b + 1
	t = t + 1
print(l)
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 19:03:12) 
-- CODE:
from numpy import *
n=array(eval(input("digite o vetor: ")))
m=0
x=0
p=zeros(size(n-1))
while (m < size(n)):
	if(n[m] > 0):
		p[m]=n[m]
		x=x+1
	m=m+1
t=0
b=0
l=zeros(size(x-1))
while(t < size(n)):
	if(n[t] > 0):
		l[b]=n[t]
		b = b + 1
	t = t + 1
print(l)
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 19:06:26) 
-- CODE:
from numpy import *
n=array(eval(input("digite o vetor: ")))
m=0
x=0
p=zeros(size(n-1))
while (m < size(n)):
	if(n[m] > 0):
		p[m]=n[m]
		x=x+1
	m=m+1
print
t=0
b=0
l=zeros(size(x-1))
while(t < size(n)):
	if(p[t] > 0):
		l[b]=n[t]
		b = b + 1
	t = t + 1
print(l)
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 19:07:33) 
-- CODE:
from numpy import *
n=array(eval(input("digite o vetor: ")))
m=0
x=0
p=zeros(size(n-1))
while (m < size(n)):
	if(n[m] > 0):
		p[m]=n[m]
		x=x+1
	m=m+1
print(p)
t=0
b=0
l=zeros(size(x-1))
while(t < size(n)):
	if(n[t] > 0):
		l[b]=n[t]
		b = b + 1
	t = t + 1
print(l)
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 19:17:01) 
-- CODE:
from numpy import *
n=array(eval(input("digite o vetor: ")))
m=0
x=0
p=zeros(size(n-1))
while (m < size(n)):
	if(n[m] > 0):
		p[m]=n[m]
		x=x+1
	m=m+1
p=(p,dtype=int)
t=0
b=0
l=zeros(size(x-1))
while(t < size(n)):
	if(n[t] > 0):
		l[b] = n[t]
		b = b + 1
	t = t + 1
print(l)
		
		
-- ERROR:
File "XXXX", line 11
    p=(p,dtype=int)
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 19:18:10) 
-- CODE:
from numpy import *
n=array(eval(input("digite o vetor: ")))
m=0
x=0
p=zeros(size(n-1))
while (m < size(n)):
	if(n[m] > 0):
		p[m]=n[m]
		x=x+1
	m=m+1
p=p(dtype==int)
t=0
b=0
l=zeros(size(x-1))
while(t < size(n)):
	if(n[t] > 0):
		l[b] = n[t]
		b = b + 1
	t = t + 1
print(l)
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 19:19:47) 
-- CODE:
from numpy import *
n=array(eval(input("digite o vetor: ")))
m=0
x=0
p=zeros(size(n-1))
while (m < size(n)):
	if(n[m] > 0):
		p[m]=n[m]
		x=x+1
	m=m+1
p=p(dtype=int)
t=0
b=0
l=zeros(size(x-1))
while(t < size(n)):
	if(n[t] > 0):
		l[b] = n[t]
		b = b + 1
	t = t + 1
print(l)
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 19:24:05) 
-- CODE:
from numpy import *
n=array(eval(input("digite o vetor: ")))
m=0
x=0
p=zeros(size(n-1))
while (m < size(n)):
	if(n[m] > 0):
		p[m]=n[m]
		p[m]=p[m](dtype=int)
		x=x+1
	m=m+1
t=0
b=0
l=zeros(size(x-1))
while(t < size(n)):
	if(n[t] > 0):
		l[b] = n[t]
		b = b + 1
	t = t + 1
print(l)
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 19:42:56) 
-- CODE:
from numpy import *
n=array(eval(input("digite o vetor: ")))
m=0
x=0
p=zeros(size(n-1))
while (m < size(n)):
	if(n[m] > 0):
		p[m]=n[m]
		x=x+1
	m=m+1
print(p)
t=0
b=0
l=zeros(size(x-1))
while(t < size(n)):
	if(n[t] > 0):
		l[b] = n[t]
		b = b + 1
	t = t + 1
print(l)
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 19:57:22) 
-- CODE:
from numpy import *
n=array(eval(input("digite o vetor: ")))
m=0
x=0
p=zeros(size(n-1))
while (m < size(n)):
	if(n[m] > 0):
		p[m]=n[m]
		x=x+1
	m=m+1
print(p)
t=0
b=0
l=zeros(size(x-1))
while(t < size(n)):
	if(p[t] > 0):
		l[b] = n[t]
		b = b + 1
	t = t + 1
print(l)
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 19:58:50) 
-- CODE:
from numpy import *
n=array(eval(input("digite o vetor: ")))
m=0
x=0
p=zeros(size(n-1))
while (m < size(n)):
	if(n[m] > 0):
		p[m]=n[m]
		x=x+1
	m=m+1
print(p)
t=0
b=0
l=zeros(size(x-1))
while(t < size(n)):
	if(p[t] > 0):
		l[b] = p[t]
		b = b + 1
	t = t + 1
print(l)
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 19:59:59) 
-- CODE:
from numpy import *
n=array(eval(input("digite o vetor: ")))
m=0
x=0
p=zeros(size(n-1))
while (m < size(n)):
	if(n[m] > 0):
		p[m]=n[m]
		x=x+1
	m=m+1
print(p)
t=0
b=0
l=zeros(size(x-1))
while(t < size(n)):
	if(p[t] > 0.0):
		l[b] = p[t]
		b = b + 1
	t = t + 1
print(l)
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 20:01:06) 
-- CODE:
from numpy import *
n=array(eval(input("digite o vetor: ")))
m=0
x=0
p=zeros(size(n-1))
while (m < size(n)):
	if(n[m] > 0):
		p[m]=n[m]
		x=x+1
	m=m+1
print(p)
t=0
b=0
l=zeros(size(x-1))
while(t < size(n)):
	if(p[t] > 0.0):
		l[b] = p[t]
		b = b + 1
	t = t + 1
print(l)
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 20:02:33) 
-- CODE:
from numpy import *
n=array(eval(input("digite o vetor: ")))
m=0
x=0
p=zeros(size(n-1))
while (m < size(n)):
	if(n[m] > 0):
		p[m]=n[m]
		x=x+1
	m=m+1
print(p)
t=0
b=0
l=zeros(size(x))
while(t < size(n)):
	if(p[t] > 0.0):
		l[b] = p[t]
		b = b + 1
	t = t + 1
print(l)
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 20:04:26) 
-- CODE:
from numpy import *
n=array(eval(input("digite o vetor: ")))
m=0
x=0
p=zeros(size(n-1))
while (m < size(n)):
	if(n[m] > 0):
		p[m]=n[m]
		x=x+1
	m=m+1
print(p)
t=0
b=0
l=zeros(size(x))
while(t < size(n)):
	if(p[t] > 0.0):
		l[b] = p[t]
		b = b + 1
		print(l)
	t = t + 1
print(l)
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 20:07:16) 
-- CODE:
from numpy import *
n=array(eval(input("digite o vetor: ")))
m=0
x=0
p=zeros(size(n-1))
while (m < size(n)):
	if(n[m] > 0):
		p[m]=n[m]
		x=x+1
	m=m+1
print(p)
t=0
b=0
l=zeros(size(x))
while(t < size(n)):
	if(p[t] > 0.0):
		l[b] = p[t]
		b = b + 1
		print(l)
	print(p)
	t = t + 1
print(l)
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 20:08:46) 
-- CODE:
from numpy import *
n=array(eval(input("digite o vetor: ")))
m=0
x=0
p=zeros(size(n-1))
while (m < size(n)):
	if(n[m] > 0):
		p[m]=n[m]
		x=x+1
	m=m+1
print(p)
t=0
b=0
l=zeros(size(x))
print(l)
while(t < size(n)):
	if(p[t] > 0.0):
		l[b] = p[t]
		b = b + 1
		print(l)
	print(p)
	t = t + 1
print(l)
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 20:09:47) 
-- CODE:
from numpy import *
n=array(eval(input("digite o vetor: ")))
m=0
x=0
p=zeros(size(n-1))
while (m < size(n)):
	if(n[m] > 0):
		p[m]=n[m]
		x=x+1
	m=m+1
print(p)
t=0
b=0
l=zeros(x)
print(l)
while(t < size(n)):
	if(p[t] > 0.0):
		l[b] = p[t]
		b = b + 1
		print(l)
	print(p)
	t = t + 1
print(l)
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 20:10:09) 
-- CODE:
from numpy import *
n=array(eval(input("digite o vetor: ")))
m=0
x=0
p=zeros(size(n-1))
while (m < size(n)):
	if(n[m] > 0):
		p[m]=n[m]
		x=x+1
	m=m+1
print(p)
t=0
b=0
l=zeros(x)
while(t < size(n)):
	if(p[t] > 0.0):
		l[b] = p[t]
		b = b + 1
	t = t + 1
print(l)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-24 20:10:26) 
-- CODE:
from numpy import *
n=array(eval(input("digite o vetor: ")))
m=0
x=0
p=zeros(size(n-1))
while (m < size(n)):
	if(n[m] > 0):
		p[m]=n[m]
		x=x+1
	m=m+1
print(p)
t=0
b=0
l=zeros(x)
while(t < size(n)):
	if(p[t] > 0.0):
		l[b] = p[t]
		b = b + 1
	t = t + 1
print(l)	
-- EXECUTION TIME:
0.465097
-- TEST CASE 1:
---- input:
[-1,-2,-3,-4,-5,-6,-7,-8,-9,-10,1]
---- correct output:
[1]
---- user output:
[0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 1.]
[1.]
-- TEST CASE 2:
---- input:
[2,-1,3,-4,5]
---- correct output:
[2 3 5]
---- user output:
[2. 0. 3. 0. 5.]
[2. 3. 5.]
-- TEST CASE 3:
---- input:
[-1,18,32,14,25,-6]
---- correct output:
[18 32 14 25]
---- user output:
[ 0. 18. 32. 14. 25.  0.]
[18. 32. 14. 25.]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 20:10:38) 
-- CODE:
from numpy import *
n=array(eval(input("digite o vetor: ")))
m=0
x=0
p=zeros(size(n-1))
while (m < size(n)):
	if(n[m] > 0):
		p[m]=n[m]
		x=x+1
	m=m+1
print(p)
t=0
b=0
l=zeros(x)
while(t < size(n)):
	if(p[t] > 0.0):
		l[b] = p[t]
		b = b + 1
	t = t + 1
print(l)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 20:13:12) 
-- CODE:
from numpy import *
n=array(eval(input("digite o vetor: ")))
m=0
x=0
p=zeros(size(n-1))
while (m < size(n)):
	if(n[m] > 0):
		p[m]=n[m]
		x=x+1
	m=m+1
print(p)
t=0
b=0
l=zeros(x,dtyp=int)
while(t < size(n)):
	if(p[t] > 0.0):
		l[b] = p[t]
		b = b + 1
	t = t + 1
print(l)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 20:13:52) 
-- CODE:
from numpy import *
n=array(eval(input("digite o vetor: ")))
m=0
x=0
p=zeros(size(n-1))
while (m < size(n)):
	if(n[m] > 0):
		p[m]=n[m]
		x=x+1
	m=m+1
print(p)
t=0
b=0
l=zeros(x,dtype=int)
while(t < size(n)):
	if(p[t] > 0.0):
		l[b] = p[t]
		b = b + 1
	t = t + 1
print(l)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-24 20:16:36) 
-- CODE:
from numpy import *
n=array(eval(input("digite o vetor: ")))
m=0
x=0
p=zeros(size(n-1))
while (m < size(n)):
	if(n[m] > 0):
		p[m]=n[m]
		x=x+1
	m=m+1
print(p)
t=0
b=0
l=zeros(x,dtype=int)
while(t < size(n)):
	if(p[t] > 0.0):
		l[b] = p[t]
		b = b + 1
	t = t + 1
print(l)	
-- EXECUTION TIME:
0.451041
-- TEST CASE 1:
---- input:
[-1,-2,-3,-4,-5,-6,-7,-8,-9,-10,1]
---- correct output:
[1]
---- user output:
[0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 1.]
[1]
-- TEST CASE 2:
---- input:
[2,-1,3,-4,5]
---- correct output:
[2 3 5]
---- user output:
[2. 0. 3. 0. 5.]
[2 3 5]
-- TEST CASE 3:
---- input:
[-1,18,32,14,25,-6]
---- correct output:
[18 32 14 25]
---- user output:
[ 0. 18. 32. 14. 25.  0.]
[18 32 14 25]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 20:16:49) 
-- CODE:
from numpy import *
n=array(eval(input("digite o vetor: ")))
m=0
x=0
p=zeros(size(n-1))
while (m < size(n)):
	if(n[m] > 0):
		p[m]=n[m]
		x=x+1
	m=m+1
print(p)
t=0
b=0
l=zeros(x,dtype=int)
while(t < size(n)):
	if(p[t] > 0.0):
		l[b] = p[t]
		b = b + 1
	t = t + 1
print(l)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-24 20:17:57) 
-- CODE:
from numpy import *
n=array(eval(input("digite o vetor: ")))
m=0
x=0
p=zeros(size(n-1))
while (m < size(n)):
	if(n[m] > 0):
		p[m]=n[m]
		x=x+1
	m=m+1
print(p)
t=0
b=0
l=zeros(x,dtype=int)
while(t < size(n)):
	if(p[t] > 0.0):
		b = b + 1
	t = t + 1
print(l)	
-- EXECUTION TIME:
0.577601
-- TEST CASE 1:
---- input:
[-1,-2,-3,-4,-5,-6,-7,-8,-9,-10,1]
---- correct output:
[1]
---- user output:
[0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 1.]
[0]
-- TEST CASE 2:
---- input:
[2,-1,3,-4,5]
---- correct output:
[2 3 5]
---- user output:
[2. 0. 3. 0. 5.]
[0 0 0]
-- TEST CASE 3:
---- input:
[-1,18,32,14,25,-6]
---- correct output:
[18 32 14 25]
---- user output:
[ 0. 18. 32. 14. 25.  0.]
[0 0 0 0]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 20:18:36) 
-- CODE:
from numpy import *
n=array(eval(input("digite o vetor: ")))
m=0
x=0
p=zeros(size(n-1),dtype=int)
while (m < size(n)):
	if(n[m] > 0):
		p[m]=n[m]
		x=x+1
	m=m+1
print(p)
t=0
b=0
l=zeros(x,dtype=int)
while(t < size(n)):
	if(p[t] > 0.0):
		b = b + 1
	t = t + 1
print(l)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 20:19:00) 
-- CODE:
from numpy import *
n=array(eval(input("digite o vetor: ")))
m=0
x=0
p=zeros(size(n-1))
while (m < size(n)):
	if(n[m] > 0):
		p[m]=n[m]
		x=x+1
	m=m+1
print(p)
t=0
b=0
l=zeros(x,dtype=int)
while(t < size(n)):
	if(p[t] > 0.0):
		b = b + 1
	t = t + 1
print(l)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 20:19:30) 
-- CODE:
from numpy import *
n=array(eval(input("digite o vetor: ")))
m=0
x=0
p=zeros(size(n-1))
while (m < size(n)):
	if(n[m] > 0):
		p[m]=n[m]
		x=x+1
	m=m+1
print(p)
t=0
b=0
l=zeros(x,dtype=int)
while(t < size(n)):
	if(p[t] > 0.0):
		l[b] = p[t]
		b = b + 1
	t = t + 1
print(l)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 20:19:52) 
-- CODE:
from numpy import *
n=array(eval(input("digite o vetor: ")))
m=0
x=0
p=zeros(size(n-1))
while (m < size(n)):
	if(n[m] > 0):
		p[m]=n[m]
		x=x+1
	m=m+1
t=0
b=0
l=zeros(x,dtype=int)
while(t < size(n)):
	if(p[t] > 0.0):
		l[b] = p[t]
		b = b + 1
	t = t + 1
print(l)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-24 20:20:02) 
-- CODE:
from numpy import *
n=array(eval(input("digite o vetor: ")))
m=0
x=0
p=zeros(size(n-1))
while (m < size(n)):
	if(n[m] > 0):
		p[m]=n[m]
		x=x+1
	m=m+1
t=0
b=0
l=zeros(x,dtype=int)
while(t < size(n)):
	if(p[t] > 0.0):
		l[b] = p[t]
		b = b + 1
	t = t + 1
print(l)	
-- EXECUTION TIME:
0.577061
-- TEST CASE 1:
---- input:
[-1,-2,-3,-4,-5,-6,-7,-8,-9,-10,1]
---- correct output:
[1]
---- user output:
[1]
-- TEST CASE 2:
---- input:
[2,-1,3,-4,5]
---- correct output:
[2 3 5]
---- user output:
[2 3 5]
-- TEST CASE 3:
---- input:
[-1,18,32,14,25,-6]
---- correct output:
[18 32 14 25]
---- user output:
[18 32 14 25]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 22:58:31) 
-- CODE:
from numpy import *
a=array(eval(input("vetor: ")))
p=0
b=0
while(p<size(a-1)):
	if (a[p]>0):
		b = b + 1
	p = p + 1
print(b)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 23:04:43) 
-- CODE:
from numpy import *
a=array(eval(input("vetor: ")))
p=0
b=0
while(p<size(a-1)):
	if (a[p]>0):
		b = b + 1
	p = p + 1
c = 0
d=0
e = zeros(b)
while(c < size(a-1)):
	if (a(c) > 0):
		e[d] = a[c]
		d = d +1
	c = C + 1
print(e)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 23:06:03) 
-- CODE:
from numpy import *
a=array(eval(input("vetor: ")))
p=0
b=0
while(p<size(a)):
	if (a[p]>0):
		b = b + 1
	p = p + 1
c = 0
d=0
e = zeros(b)
while(c < size(a)):
	if (a(c) > 0):
		e[d] = a[c]
		d = d +1
	c = C + 1
print(e)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 23:06:38) 
-- CODE:
from numpy import *
a=array(eval(input("vetor: ")))
p=0
b=0
while(p<size(a)):
	if (a[p]>0):
		b = b + 1
	p = p + 1
c = 0
d=0
e = zeros(b)
while(c < size(a)):
	if (a[c] > 0):
		e[d] = a[c]
		d = d +1
	c = C + 1
print(e)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 23:06:56) 
-- CODE:
from numpy import *
a=array(eval(input("vetor: ")))
p=0
b=0
while(p<size(a)):
	if (a[p]>0):
		b = b + 1
	p = p + 1
c = 0
d=0
e = zeros(b)
while(c < size(a)):
	if (a[c] > 0):
		e[d] = a[c]
		d = d +1
	c = c + 1
print(e)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 23:07:44) 
-- CODE:
from numpy import *
a=array(eval(input("vetor: ")))
p=0
b=0
while(p<size(a)):
	if (a[p]>0):
		b = b + 1
	p = p + 1
c = 0
d=0
e = zeros(b,dtype=int)
while(c < size(a)):
	if (a[c] > 0):
		e[d] = a[c]
		d = d +1
	c = c + 1
print(e)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 23:07:59) 
-- CODE:
from numpy import *
a=array(eval(input("vetor: ")))
p=0
b=0
while(p<size(a)):
	if (a[p]>0):
		b = b + 1
	p = p + 1
c = 0
d=0
e = zeros(b,dtype=int)
while(c < size(a)):
	if (a[c] > 0):
		e[d] = a[c]
		d = d +1
	c = c + 1
print(e)
-- EXECUTION TIME:
0.510789
-- TEST CASE 1:
---- input:
[-1,-2,-3,-4,-5,-6,-7,-8,-9,-10,1]
---- correct output:
[1]
---- user output:
[1]
-- TEST CASE 2:
---- input:
[2,-1,3,-4,5]
---- correct output:
[2 3 5]
---- user output:
[2 3 5]
-- TEST CASE 3:
---- input:
[-1,18,32,14,25,-6]
---- correct output:
[18 32 14 25]
---- user output:
[18 32 14 25]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
